# wit_hackathon

./: .pre-commit-config.yaml  LICENSE  README.md  model.py  pyproject.toml  withackathon.ipynb
.github/workflows/: pylint.yml
Data/: hackathon.csv
src/: model.py
